story update
add stroy delete